--- a/lesson-4/index.html
+++ b/lesson-4/index.html
@@ -6,23 +6,29 @@
     <link rel="stylesheet" type="text/css" href="/dependencies/skeleton.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body><div class="container"><div class="row"><div class="twelve columns">
-    <h1>PHP Lesson 4</h1>
-    <h2>Four: Simple Contact Form</h2>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="twelve columns">
+                <h1>PHP Lesson 4</h1>
+                <h2>Four: Simple Contact Form</h2>
+                <section class="form-container">
+                    <form method="post" action="contact-form.php">
+                        <label for="Name">Name:</label>
+                        <input type="text" name="Name" id="Name" />
 
-    <form method="post" action="contact-form.php">
-        <label for="Name">Name:</label>
-        <input type="text" name="Name" id="Name" />
+                        <label for="Email">Email: </label>
+                        <input type="text" name="Email" id="Email" />
 
-        <label for="Email">Email: </label>
-        <input type="text" name="Email" id="Email" />
+                        <label for="Message">Message: </label>
+                        <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
 
-        <label for="Message">Message: </label><br />
-        <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
+                        <input type="submit" name="submit" value="Submit" class="submit-button" />
+                    </form>
+                </section>
 
-        <input type="submit" name="submit" value="Submit" class="submit-button" />
-    </form>
-
-</div></div></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
